Fix overflow when sidebar is off-canvas

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,4 +24,5 @@ html, body {
 	box-sizing: border-box;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
+	overflow: hidden;
 }
